name:                transmission-client
version:             2.80.0
synopsis:            A Haskell wrapper for Transmission RPC protocol.
description:         See README.md for details.
homepage:            https://github.com/TerrorJack/pt-helper
license:             BSD3
license-file:        LICENSE
author:              Shao Cheng
maintainer:          astrohavoc@gmail.com
copyright:           2016 Shao Cheng
category:            Network
build-type:          Simple
cabal-version:       >=1.22

library
  hs-source-dirs:      src
  exposed-modules:     Transmission
  build-depends:       aeson,
                       classy-prelude,
                       data-default-class,
                       http-client,
                       http-client-tls,
                       http-types
  default-language:    Haskell2010
  ghc-options:         -Wall
  default-extensions:  NoImplicitPrelude

source-repository head
  type:     git
  location: https://github.com/TerrorJack/pt-helper
